# quant

./: .clauderc  .gitignore  AGENTS.md  CLAUDE.md  CTP_安装说明.md  CTP接入环境（测试+生产）-20250407(3).xlsx  CtpPlus_SimNow_使用指南.md  DEVELOPMENT.md  README.md  SIMNOW_README.md  analysis_report.md  dashboard.py  docker-compose.yml  main.py  requirements.txt  test_ctp_plus_simnow.py  test_tqsdk_connection.py  国泰君安程序化交易接入测试模板2025-11-20最新.docx
back_end/: .env.example  Dockerfile  LIVE_TEST_RUNBOOK.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat
back_end/config/: config.example.json  config_example.json  config_production.json
back_end/config/wt/: commodities.json  config.json  contracts.json  env.yaml  fees.json  holidays.json  hots.json  logcfg.yaml  sessions.json  tdcfg.yaml
back_end/src/: observability.py  settings.py
back_end/src/analysis/: __init__.py  report.py  types.py
back_end/src/api/: __init__.py  _constants.py  app.py  backtest_service.py  deps.py  models.py  schemas.py  security.py  state.py  trial_run.py  ws.py
back_end/src/backtest/: __init__.py  config.py  engine.py  errors.py  result.py
back_end/static/: ws_demo.html
back_end/tests/: conftest.py  helpers.py  test_analysis_metrics.py  test_api_auth.py  test_backtest_accounting.py  test_bar_aggregator.py  test_data_governance.py  test_gateway_registry.py  test_manual_trading.py  test_market_ticks.py  test_security_and_risk.py  test_strategy_position_accounting.py  test_trading_engine_auto_strategy.py  test_trial_run_api.py  test_verify_strategy.py  test_vnpy_gateway.py
(+126 files in other folders)
