[project]
name = "quant-back-end"
version = "0.1.0"
requires-python = ">=3.10,<3.14"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
  ".venv",
  "__pycache__",
  "data",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
files = [
  "src/api/security.py",
  "src/trading/risk.py",
  "src/data/cache.py",
  "src/data/governance.py",
  "src/observability.py",
  "tests",
]
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_configs = true
check_untyped_defs = false
explicit_package_bases = true
mypy_path = "."
exclude = [
  "data/",
  "__pycache__/",
]
